# xolotl

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
src/: main.rs
src/api/: services.rs
src/model/: mod.rs  service_address.rs  service_registry.rs
src/registry/: in_memory_registry.rs  mod.rs
tests/: binary_tests.rs
